--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,15 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>台灣軟陶</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+      }
+    </script>
   <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^18.3.1/",
     "react": "https://aistudiocdn.com/react@^18.3.1",
     "react/": "https://aistudiocdn.com/react@^18.3.1/",
-    "@headlessui/react": "https://aistudiocdn.com/@headlessui/react@^1.7.18",
-    "react-markdown": "https://aistudiocdn.com/react-markdown@^9.0.1"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0"
   }
 }
 </script>
