[OTHERS] Modify some pages.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,45 +1,34 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>台灣軟陶</title>
+    <title>台灣軟陶 - 軟陶的第一選擇</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
         darkMode: 'class',
-      }
+      };
     </script>
-  <script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://aistudiocdn.com/react-dom@^18.3.1/",
-    "react": "https://aistudiocdn.com/react@^18.3.1",
-    "react/": "https://aistudiocdn.com/react@^18.3.1/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0"
-  }
-}
-</script>
-<style>
+
+    <style>
       @keyframes fade-in-up {
-        from {
+        0% {
           opacity: 0;
-          transform: translateY(20px);
+          transform: translateY(30px);
         }
-        to {
+        100% {
           opacity: 1;
           transform: translateY(0);
         }
       }
       .animate-fade-in-up {
-        opacity: 0; /* Start hidden */
-        animation: fade-in-up 0.5s ease-out forwards;
+        animation: fade-in-up 0.8s cubic-bezier(0.16, 1, 0.3, 1) both;
       }
     </style>
-<link rel="stylesheet" href="/index.css">
-</head>
+    <link rel="stylesheet" href="/index.css" />
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
